<resources>
    <string name="app_name">TodoApplication</string>

    <string name="warning_empty_field">Нельзя создать пустую заметку</string>
    <string name="todo_empty_list">Список пуст</string>
    <string name="btn_add_todo">Добавить заметку</string>
    <string name="lbl_description">Описание</string>
    <string name="lbl_title">Название</string>
    <string name="label_name">Link</string>
    <string name="label_second_name">Фамилия:</string>
    <string name="label_birthday">Дата рождения:</string>
    <string name="label_age">Возраст:</string>
    <string name="label_specialty">Специальность:</string>
    <string name="reset">Reset</string>
    <string name="button_load_reload_data">Load/Reload data from api</string>
</resources>
